Switch to java 8, fix variable.